# gomemocache

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  deps.bzl  go.mod  go.sum
.github/workflows/: bazel-test.yml
memocache/: BUILD.bazel  memocache.go  memocache_test.go
